@@ -1,6 +1,10 @@
 package com.shop.servlet.action;
 
 import com.shop.config.Config;
+import com.shop.model.BottleBeerData;
+import com.shop.model.BuyBottleBeerData;
+import com.shop.model.BuyDraftBeerData;
+import com.shop.model.DraftBeerData;
 import com.shop.repository.PositionRepository;
 import com.shop.repository.UserRepository;
 import com.shop.repository.UserTransactionRepository;
@@ -10,7 +14,6 @@ import com.shop.service.ChangePositionService;
 import com.shop.service.GetAllUsersHistoryService;
 import com.shop.service.GetAvailablePositionsService;
 import com.shop.service.GetUserHistoryService;
-import com.shop.service.JSONParseService;
 import com.shop.service.LoginService;
 import com.shop.service.PageService;
 import com.shop.service.RegistrationService;
@@ -22,7 +25,24 @@ import com.shop.service.exception.UnableToExecuteQueryException;
 import com.shop.service.exception.UnableToGetConnectionException;
 import com.shop.service.exception.UnableToPerformSerializationException;
 import com.shop.service.exception.UnacceptableDatabaseDriverException;
+import com.shop.service.performer.BottleBeerPerformer;
+import com.shop.service.performer.BuyBottleBeerDataValidatorPerformer;
+import com.shop.service.performer.BuyBottleBeerPerformer;
+import com.shop.service.performer.BuyDraftBeerDataValidatorPerformer;
+import com.shop.service.performer.BuyDraftBeerPerformer;
+import com.shop.service.performer.DraftBeerPerformer;
+import com.shop.service.validator.AlcoholPercentageValidator;
+import com.shop.service.validator.BitternessValidator;
+import com.shop.service.validator.ContainerTypeValidator;
+import com.shop.service.validator.ContainerVolumeValidator;
+import com.shop.service.validator.EmailValidator;
+import com.shop.service.validator.NameValidator;
+import com.shop.service.validator.NotEmptyFieldValidator;
 import com.shop.servlet.dto.InformationResponse;
+import com.shop.servlet.request.AddPositionRequest;
+import com.shop.servlet.request.ChangePositionRequest;
+import com.shop.servlet.request.LoginRequest;
+import com.shop.servlet.request.RegistrationRequest;
 import org.codehaus.jackson.map.ObjectMapper;
 
 import javax.servlet.ServletException;
@@ -30,8 +50,6 @@ import javax.servlet.http.HttpServlet;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 import java.io.IOException;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 public class DoAllServlet extends HttpServlet {
@@ -45,7 +63,6 @@ public class DoAllServlet extends HttpServlet {
         super.init();
         ObjectMapper objectMapper = new ObjectMapper();
         UserRepository userRepository = new UserRepository();
-        JSONParseService jsonParseService = new JSONParseService(objectMapper);
         Config config = new Config();
         PositionRepository positionRepository = new PositionRepository(objectMapper, config);
         ValidatorService validatorService = new ValidatorService();
@@ -53,18 +70,86 @@ public class DoAllServlet extends HttpServlet {
         PageService pageService = new PageService();
 
         response = new Response(objectMapper);
-        postActions = Arrays.asList(
-                new RegistrationAction(new RegistrationService(userRepository), jsonParseService, response),
-                new LoginAction(new LoginService(userRepository), jsonParseService, response),
-                new AddPositionAction(new AddPositionService(positionRepository, config, validatorService), jsonParseService, response),
-                new BuyPositionAction(new BuyPositionService(positionRepository, userTransactionRepository, userRepository), jsonParseService, response)
+        postActions = List.of(
+                new RegistrationAction(new RegistrationService(userRepository,
+                        List.of(
+                                new NotEmptyFieldValidator<>(RegistrationRequest::getPassword, "Password is null or empty"),
+                                new NotEmptyFieldValidator<>(RegistrationRequest::getEmail, "Email is null or empty"),
+                                new NotEmptyFieldValidator<>(RegistrationRequest::getName, "Name is null or empty"),
+                                new EmailValidator(),
+                                new NameValidator()
+                        ), validatorService),
+                        objectMapper,
+                        response),
+                new LoginAction(new LoginService(userRepository,
+                        List.of(
+                                new NotEmptyFieldValidator<>(LoginRequest::getName, "Name is null or empty"),
+                                new NotEmptyFieldValidator<>(LoginRequest::getPassword, "Password is null or empty")
+                        ), validatorService),
+                        objectMapper,
+                        response),
+                new AddPositionAction(new AddPositionService(positionRepository, validatorService,
+                        List.of(
+                                new NotEmptyFieldValidator<>(AddPositionRequest::getName, "Name is null or empty"),
+                                new NotEmptyFieldValidator<>(AddPositionRequest::getContainerType, "Container type is null or empty"),
+                                new NotEmptyFieldValidator<>(AddPositionRequest::getBeerType, "Beer type is null or empty"),
+                                new NotEmptyFieldValidator<>(AddPositionRequest::getAlcoholPercentage, "Alcohol percentage is null or empty"),
+                                new NotEmptyFieldValidator<>(AddPositionRequest::getBitterness, "Bitterness is null or empty"),
+                                new ContainerTypeValidator<>(AddPositionRequest::getContainerType, "Incorrect container type"),
+                                new AlcoholPercentageValidator(config.getMinAlcoholPercentage(), config.getMaxAlcoholPercentage(), "Incorrect alcohol percentage"),
+                                new BitternessValidator(config.getMinBitterness(), config.getMAxBitterness(), "Incorrect bitterness value")
+                        ),
+                        List.of(
+                                new DraftBeerPerformer(validatorService,
+                                        List.of(
+                                                new NotEmptyFieldValidator<>(DraftBeerData::getAvailableLiters, "Available litres is null or empty")
+                                        )),
+                                new BottleBeerPerformer(validatorService,
+                                        List.of(
+                                                new NotEmptyFieldValidator<>(BottleBeerData::getContainerVolume, "Container volume is null or empty"),
+                                                new NotEmptyFieldValidator<>(BottleBeerData::getQuantity, "Quantity is null or empty"),
+                                                new ContainerVolumeValidator<>(BottleBeerData::getContainerVolume, config.getMinContainerVolume(), config.getMaxContainerVolume(), "Incorrect container volume")
+                                        ))
+                        )
+                ),
+                        objectMapper,
+                        response),
+                new BuyPositionAction(new BuyPositionService(
+                        List.of(
+                                new BuyBottleBeerPerformer(positionRepository),
+                                new BuyDraftBeerPerformer(positionRepository)
+                        ),
+                        positionRepository,
+                        userTransactionRepository,
+                        userRepository,
+                        List.of(
+                                new BuyDraftBeerDataValidatorPerformer(List.of(
+                                        new NotEmptyFieldValidator<>(BuyDraftBeerData::getId, "Id is null or empty"),
+                                        new NotEmptyFieldValidator<>(BuyDraftBeerData::getQuantity, "Quantity is null or empty")
+                                )),
+                                new BuyBottleBeerDataValidatorPerformer(List.of(
+                                        new NotEmptyFieldValidator<>(BuyBottleBeerData::getId, "Id is null or empty"),
+                                        new NotEmptyFieldValidator<>(BuyBottleBeerData::getQuantity, "Quantity is null or empty")
+                                ))
+                        )),
+                        objectMapper,
+                        response)
         );
 
-        putActions = Collections.singletonList(
-                new ChangePositionAction(new ChangePositionService(positionRepository, config, validatorService), jsonParseService, response)
+        putActions = List.of(
+                new ChangePositionAction(new ChangePositionService(positionRepository,
+                        validatorService,
+                        List.of(
+                                new NotEmptyFieldValidator<>(ChangePositionRequest::getId, "Id is null or empty"),
+                                new NotEmptyFieldValidator<>(ChangePositionRequest::getContainerVolume, "Container volume is null or empty"),
+                                new NotEmptyFieldValidator<>(ChangePositionRequest::getQuantity, "Quantity is null or empty"),
+                                new ContainerVolumeValidator<>(ChangePositionRequest::getContainerVolume, config.getMinContainerVolume(), config.getMaxContainerVolume(), "Incorrect container volume")
+                        )),
+                        objectMapper,
+                        response)
         );
 
-        getActions = Arrays.asList(
+        getActions = List.of(
                 new GetUserHistoryAction(new GetUserHistoryService(userTransactionRepository, config, userRepository, pageService), response),
                 new GetAllUsersHistoryAction(new GetAllUsersHistoryService(userTransactionRepository, config, pageService), response),
                 new GetAvailablePositionsAction(new GetAvailablePositionsService(positionRepository, config, pageService), response)
